add: in memory cache + 2 get(@Query) with usage of native and jpql